crates/unsoundness_checker/tests/snapshots/rules/mangled_dunder_instance_variable/markdown_test__snippet_01.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: output
---
warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_HiddenDunderVariables__str_x` can bypass type checking and lead to runtime type errors.
 --> main.py:4:9
  |
2 |     def __init__(self, x: int) -> None:
3 |         self.__str_x = str(x)
4 |         self._HiddenDunderVariables__str_x = x
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |
6 |     def get_str_x(self) -> str:
  |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file

warning[mangled-dunder-instance-variable]: Explicit use of mangled attribute `_HiddenDunderVariables__str_x` can bypass type checking and lead to runtime type errors.
  --> main.py:16:1
   |
15 | # We should also not be able to set it
16 | hidden_dunder_variables._HiddenDunderVariables__str_x = 1
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
info: rule `mangled-dunder-instance-variable` was selected in the configuration file
